# cmake

./: README.md
1.signalFile/: CMakeLists.txt  main.cpp
2.multipleFileInSameDirectory/: CMakeLists.txt  MyMath.h  main.cpp
3.multipleFileInDifferentDirectory/: CMakeLists.txt  main.cpp
3.multipleFileInDifferentDirectory/math/: CMakeLists.txt  MyMath.cpp
4.CustomCompilation/: CMakeLists.txt  config.h.in  main.cpp
4.CustomCompilation/math/: MyMath.cpp  MyMath.h
5.installAndTest/: CMakeLists.txt  main.cpp
5.installAndTest/math/: MyMath.h
6.gdb-environment-macro/: CMakeLists.txt  main.cpp
6.gdb-environment-macro/math/: CMakeLists.txt  MyMath.cpp  MyMath.h
7.addVersion/: CMakeLists.txt
8.createInstallPack/: CMakeLists.txt  config.h.in  main.cpp
